# bevy-test

./: .gitignore  .prettierignore  Cargo.toml  Trunk.toml  flake.nix  index.html  taplo.toml
.github/workflows/: ci.yaml
crates/base_config/: Cargo.toml
crates/base_config/src/: canvas.rs  lib.rs  render.rs
crates/base_core/: Cargo.toml
crates/base_core/src/: cursor.rs  enemy.rs  lib.rs  menu.rs  player.rs  quick_close.rs
crates/base_game/: Cargo.toml
crates/base_game/src/: main.rs
crates/base_retro/: Cargo.toml
crates/base_retro/src/: canvas.rs  lib.rs
crates/base_retro/src/input/: mod.rs  mouse.rs  touch.rs
